# egg-smol

./: Cargo.toml  ac-rfc.md  clippy.toml  examples.json  min.egg  web_demo_bg.wasm
core-relations/: Cargo.toml  README.md
egg-zdd-bridge/: Cargo.toml
egg-zdd-bridge/src/: lib.rs
egglog-exp/: .gitignore  Cargo.toml  README.md
egglog-exp/core-relations/: Cargo.toml  README.md
egglog-exp/core-relations/src/: common.rs  lib.rs  query.rs  table_shortcuts.rs  table_spec.rs  tests.rs
egglog-exp/core-relations/src/action/: mask.rs  mod.rs  tests.rs
egglog-exp/core-relations/src/free_join/: execute.rs  mod.rs
egglog-exp/core-relations/src/hash_index/: mod.rs  tests.rs
egglog-exp/core-relations/src/offsets/: mod.rs  tests.rs
egglog-exp/core-relations/src/pool/: mod.rs
egglog-exp/core-relations/src/primitives/: mod.rs  tests.rs
egglog-exp/core-relations/src/row_buffer/: mod.rs  tests.rs
egglog-exp/core-relations/src/table/: mod.rs  tests.rs
egglog-exp/core-relations/src/uf/: mod.rs  tests.rs
egglog-exp/egglog-bridge/: Cargo.toml
egglog-exp/egglog-bridge/examples/: ac.rs  ac_tracing.rs  make-ac-bench.py  math.rs
egglog-exp/egglog-bridge/src/: lib.rs  macros.rs  proof_dag.rs  proof_spec.rs  rule.rs  term_proof_dag.rs  tests.rs
egglog-exp/numeric-id/: Cargo.toml
egglog-exp/numeric-id/src/: lib.rs  tests.rs
egglog-exp/src/: actions.rs  common.rs  lib.rs  pool.rs  schema.rs  tests.rs
egglog-exp/src/free_join/: execute.rs  mod.rs  plan.rs  tests.rs
egglog-exp/src/free_join/offset_frame/: mod.rs  tests.rs
egglog-exp/src/function/: index.rs  index_cache.rs  mod.rs  offsets.rs  table.rs  tests.rs
egglog-exp/src/primitives/: mod.rs  tests.rs
egglog-exp/src/uf/: mod.rs  tests.rs
egglog-exp/union-find/: Cargo.toml
egglog-exp/union-find/src/: lib.rs  tests.rs
src/: binary_search.rs  desugar.rs  extract.rs  gj.rs  lib.rs  main.rs  (+5 more)
(+66 files in other folders)
