[package]
name = "egglog-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
core-relations = { path = "../core-relations" }
numeric-id = { path = "../numeric-id" }
smallvec = "1.10"
thiserror = "1.0"
anyhow = "1.0"
num-rational = "0.4"
log = "0.4"
indexmap = "2.2"
petgraph = "0.6"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "ac"

[[example]]
name = "math"

[[example]]
name = "ac_tracing"